Manged to show boxes on display

--- a/Siege/Siege.vcxproj
+++ b/Siege/Siege.vcxproj
@@ -99,6 +99,9 @@
     <ClInclude Include="scene_template.h" />
     <ClInclude Include="sys.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="temp.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
