--- a/Siege/Siege.vcxproj.filters
+++ b/Siege/Siege.vcxproj.filters
@@ -43,6 +43,9 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="utility.h">
+      <Filter>System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="temp.txt" />
